# antifrode_backend

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  Untitled13 (1).ipynb  Untitled6.ipynb  alembic.ini  config.docker.yaml  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_mock_upload.py  test_optimized_upload.py  test_upload.py
alembic/: env.py
alembic/versions/: 0455d06f842b_add_scoring_jobs_table.py  3000198b3bb4_fix_enum_case.py  42bccdaceb52_add_station_and_order_fields.py  4f30f90ba86e_add_scoring_jobs.py  7cef62923e64_add_is_manual_to_passenger_scores.py  a3e5c920c19c_add_redeem_op.py  a3f2c1b4d5e6_add_passenger_features_and_scores.py  a9fedb4eb37d_fix_risk_band_type.py  b01767d7336b_initial.py  bff0cf4461fb_add_route_field.py  dcd4f8f82426_add_audit_logs.py  dd8e2383f024_add_unique_risk_concentration.py
antifront-main/js/api/: apiClient.js  dashboard.js  index.js  operations.js  passengers.js
antifront-main/static/: index.html  login.html  script.js  style.css
app/application/audit/: __init__.py  get_audit_log.py  list_audit_logs.py
app/application/auth/: exceptions.py  login.py  (+3 more)
app/infrastructure/: auth.py  config.py  container.py  data_parser.py  excel_parser_ml.py  ml_client.py  scoring.py  validators.py
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
ml_service/: Dockerfile  main.py  processor.py  requirements.txt
scripts/: entrypoint.sh  init-db.sql
static/: auth.js  index.html  login.html  register.html  script.js  style.css
(+184 files in other folders)
