[project]
name = "antifrode-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dature[yaml]>=0.16.0",
    "dishka>=1.9.1",
    "fastapi[standard]>=0.135.3",
    "greenlet>=3.4.0",
    "jose>=1.0.0",
    "opentelemetry-api>=1.41.0",
    "psycopg[binary]>=3.2.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.13.0",
    "pyjwt>=2.12.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
    "fpdf2>=2.8.2",
    "openpyxl>=3.1.5",
]
